# template-inference-holoscan

./: .gitignore  CMakeLists.txt  Dockerfile  app_config.yaml
.devcontainer/: Dockerfile  devcontainer.json
docs/: README.md  SUMMARY.md
src/application/: application.cpp
tests/: CMakeLists.txt  config.hpp  recorder.hpp  utils.hpp
tests/data/: app_config.yaml
